--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ body{
 .menubar-2 ul li a {
   text-decoration: none;
   color: #fff;
-  font: 24px;
+  font-size: 24px;
   font-weight: bold;
   text-transform: uppercase;
   padding: 10px;
@@ -101,6 +101,7 @@ body{
   justify-content: space-around;
   border-radius: 15px;
   margin-top: 15px;
+  z-index: 100;
 
 }
 
@@ -111,3 +112,51 @@ body{
   align-items: center;
 }
 
+form {
+  max-width: 700px;
+  border: 2px solid gray;
+  padding: 20px;
+  margin-inline: auto;
+  margin-top: 40px;
+  border-radius: 10px;
+  box-shadow: 0 5px 2px gray;
+}
+
+.profile {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  margin-inline: auto;
+  overflow: hidden;
+
+  img{
+    width: 100%;
+    object-fit: cover;
+  }
+}
+
+input[type=text] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+
+input[type=submit] {
+  width: 100%;
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #45a049;
+}
