--- a/style.css
+++ b/style.css
@@ -44,11 +44,27 @@ body{
   background: #313131;
   border-radius: 10px;
   margin-top: 10px;
-  box-shadow: 0 4px 2px 2px #888686;
+  z-index: 100;
 }
 
 .menubar ul li:hover .sub-menu-one ul {
   display: block;
+}
+
+.menubar ul li:hover .full-screen-drapdown {
+  width: 100%;
+  left: 0;
+  display: flex;
+  justify-content: space-around;
+  margin-top: 0;
+  background: #313131;
+}
+
+.menubar-2 ul li:hover .full-screen-drapdown ul {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  align-items: center;
 }
 
 .fa {
@@ -59,64 +75,6 @@ body{
   transform: rotate(180deg);
 }
 
-.menubar-2 {
-  background-color: rgb(74, 172, 74);
-  padding: 15px;
-}
-
-.menubar-2 ul {
-  display: flex;
-  gap: 30px;
-  list-style: none;
-
-  h3{
-    color: #fff;
-    font-size: 24px;
-    font-weight: bold;
-  }
-}
-
-.menubar-2 ul li a {
-  text-decoration: none;
-  color: #fff;
-  font-size: 24px;
-  font-weight: bold;
-  text-transform: uppercase;
-}
-
-
-.fa {
-  color: #fff;
-}
-
-.sub-menu-two {
-  display: none;
-}
-
-.menubar-2 ul li:hover .sub-menu-two {
-  display: flex;
-  position: absolute;
-  background-color: rgb(63, 127, 63);
-  box-shadow: 0 5px 2px 2px rgb(141, 171, 141);
-  padding: 30px;
-  left: 0;
-  width: 100%;
-  justify-content: space-around;
-  border-radius: 15px;
-  z-index: 100;
-
-}
-
-.menubar-2 ul li:hover .sub-menu-two ul {
-  display: flex;
-  flex-direction: column;
-  gap: 30px;
-  align-items: center;
-}
-
-.menubar-2 ul li:hover .fa {
-  transform: rotate(180deg);
-}
 
 form {
   max-width: 700px;
@@ -177,12 +135,9 @@ input[type=submit]:hover {
 }
 
 iframe {
-  display: block;
-  width: 500px;
-  max-width: 800px;
+  max-width: 500px;
   margin: 40px auto;
   border: 2px solid;
-  border-radius: 5px;
 }
 
 @media (max-width:768px) {
