--- a/style.css
+++ b/style.css
@@ -199,7 +199,9 @@ iframe {
 
 @media (max-width:768px) {
   .menubar ul li:hover .full-screen-drapdown {
-    flex-direction: column;
+    flex-wrap: wrap;
     width: auto;
+    left: auto;
+    padding: 15px;
   }
 }
